set litef's plugins from the manifest

--- a/templates/etc/litef/application.conf.erb
+++ b/templates/etc/litef/application.conf.erb
@@ -45,7 +45,7 @@ litef.indexer {
 
 litef.conductor {
     fileSizeLimit = 10000
-    plugins = "conductor.plugins.DocumentIndexerPlugin,conductor.plugins.NerdPlugin,conductor.plugins.VirtuosoFeederPlugin,conductor.plugins.ElasticFeederPlugin"
+    plugins = "<%= scope.lookupvar('::cendari::litef_conductor_plugins') %>"
 }
 
 akka {
