add multilingual nerd and nerd fileSizeLimit to litef config file

--- a/templates/etc/litef/application.conf.erb
+++ b/templates/etc/litef/application.conf.erb
@@ -33,6 +33,8 @@ litef.virtuoso {
 
 litef.nerd {
     namespace = "http://traces1.saclay.inria.fr:8090/"
+    namespaceMultilingual = "http://136.243.145.239/nerd/"
+    fileSizeLimit = 60000
 }
 
 litef.elastic {
